--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
         </a>
     </div>
 
+    <div id="slider" class="slider">
+      <div class="wrapper">
+        <div id="slides" class="slides">
+          <span class="slide">Slide 1</span>
+          <span class="slide">Slide 2</span>
+          <span class="slide">Slide 3</span>
+          <span class="slide">Slide 4</span>
+          <span class="slide">Slide 5</span>
+        </div>
+      </div>
+      <a id="prev" class="control prev"></a>
+      <a id="next" class="control next"></a>
+    </div>
+
   <section id="contact">
     <div class="overlay">
       <div class="containers">
